# toxic-messages-handling-project

./: .dockerignore  .gitignore  DL_Experiments.ipynb  DatasetCleaning.ipynb  DatasetCleaning_v1.ipynb  Dockerfile  ML.ipynb  README.md  create_admin.py  dataset_cleaning.ipynb  dataset_eda.ipynb  eda.ipynb  eda_draft.ipynb  embs_clusters_s3_demo.ipynb  finetune_BERT.ipynb  first_ml_models.ipynb  get_raw_data_and_merge.ipynb  howto-run-inference.md  load_prd_model_from_mlflow.ipynb  nonlinear_ML.ipynb  pyproject.toml  requirements.txt  text_domain_features_0.ipynb  train_linear_using_mlflow.ipynb  отчет..docx
src/: .env  config.json  database.py  main.py
src/alembic/versions/: a1b2c3d4e5f6_add_model_id_prediction_label.py
src/auth/: authenticate.py  dependencies.py
src/core/: config.py  security.py
src/domain/: models.py
src/routers/: forward.py  monitoring.py  requests.py  users.py
src/schemas/: schemas.py
src/services/: model.py  model_registry.py  preprocessor.py  text_preprocessor.py  text_utils.py  utils.py
src/services/data/LinearSVMBinaryV0/: Linear_SVC_macf1_0.86_unf_True_tc_text_save_inform_dws_False.pkl  Linear_SVC_macf1_0.87_unf_True_tc_text_del_stop_words_dws_False.pkl  Linear_SVC_macf1_0.87_unf_True_tc_text_encoded_profanity_dws_False.pkl  bad_words_lemmas.txt  encoding_emoji.json  encoding_emoticon.json  encoding_profanities.json  encoding_rep_punct.json  encoding_sep_punct.json
