# install the project by using: pip install . instead of pip install -r requirements.txt

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "T-guard"
version = "0.0.1"
description = "Веб-сервис, использующий методы машинного обучения и глубокого обучения для определения токсичности текстовых сообщений." 
readme = "README.md"
requires-python = ">=3.9, <3.14"

# authors = [aidmitruk, kondratevaai, obbrnu]

# base dependencies, less specific versions: 
dependencies = [
    "aiosqlite",
    "altair",
    "annotated-doc",
    "annotated-types",
    "anyio",
    "asttokens",
    "attrs",
    "bcrypt",
    "build",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "comm",
    "contourpy",
    "cryptography",
    "cycler",
    "DAWG-Python",
    "DAWG2-Python",
    "debugpy",
    "decorator",
    "docopt",
    "dotenv",
    "ecdsa",
    "emoji",
    "entrypoints",
    "executing",
    "fastapi",
    "fastjsonschema",
    "fonttools",
    "great_expectations",
    "greenlet",
    "h11",
    "idna",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "jedi",
    "Jinja2",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter_client",
    "jupyter_core",
    "kagglehub",
    "kiwisolver",
    "MarkupSafe",
    "marshmallow",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "nbformat",
    "nbstripout",
    "nest-asyncio",
    "nltk",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "passlib",
    "phik",
    "pillow",
    "pip-tools",
    "platformdirs",
    "prompt_toolkit",
    "psutil",
    "pure_eval",
    "pyarrow",
    "pyasn1",
    "pycparser",
    "pydantic",
    "pydantic_core",
    "Pygments",
    "PyJWT",
    "pymorphy3",
    "pymorphy3-dicts-ru",
    "pyparsing",
    "pyproject_hooks",
    "python-dateutil",
    "python-dotenv",
    "python-jose",
    "pytz",
    "PyYAML",
    "pyzmq",
    "referencing",
    "regex",
    "requests",
    "rpds-py",
    "rsa",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setuptools",
    "six",
    "SQLAlchemy",
    "stack-data",
    "starlette",
    "stop-words",
    "threadpoolctl",
    "toolz",
    "tornado",
    "tqdm",
    "traitlets",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "tzlocal",
    "urllib3",
    "uvicorn",
    "wcwidth",
    "wheel",
    "wordcloud"
]

[project.optional-dependencies] # 
dev = [ 
    "pytest",
    "ipython",
    "jupyterlab",
    "debugpy",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
# where = ["src"] # for the future and __init__.py packets
